# gradec

./: .codecov.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linting.yml  python-publish.yml  testing.yml
docs/: Makefile  about.rst  api.rst  conf.py  dev_guide.rst  environment.yml  fetching.rst  glossary.rst  index.rst  installation.rst  links.rst  methods.rst  outputs.rst  requirements.txt
examples/: 01_plot_segmentation.py  02_plot_decoding_1d.py  03_plot_decoding_md.py
gradec/: __init__.py  decode.py  decoding.py  fetcher.py  model.py  plot.py  segmentation.py  segmetation.py  stats.py  transform.py  utils.py
gradec/tests/: __init__.py  conftest.py  test_decode.py  test_fetcher.py  test_model.py  test_plot.py  test_segmentation.py
