[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]

[project]
name = "gradec"
description = "Meta-analytic gradient decoding"
license = {file = "LICENSE"}
authors = [{ name = "Gradec developers" }]
maintainers = [{ name = "Julio A Peraza", email = "jperaza@fiu.edu" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "nimare",
    "neuromaps",
    "netneurotools",
    "pandas",
    "surfplot",
    "scipy<1.8.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/JulioAPeraza/gradec"

[project.optional-dependencies]
doc = [
    "m2r",
    "pydot >= 1.2.3",
    "recommonmark",
    "sphinx >= 1.8",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx_gallery",
    "sphinx_rtd_theme>=0.5.2",
    "sphinxcontrib-bibtex"
]
dev = [
    "black",
    "pre-commit",
    "isort",
    "flake8-pyproject",
]
# For testing of oldest usable versions of dependencies.
min = [
	"nimare==0.1.0",
]
test = [
    "coverage",
    "coveralls",
    "flake8-black",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pyproject",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
# Aliases
docs = ["gradec[doc]"]
devs = ["gradec[dev]"]
tests = ["gradec[test]"]
minimum = ["gradec[min]"]
all = ["gradec[doc,dev,test]"]

[tool.flake8]
max-line-length = 99
exclude = "*build/"
ignore = ["E203", "E402", "E722", "W503"]
per-file-ignores = """
    */__init__.py:D401
    nimare/utils.py:D401
"""
docstring-convention = "numpy"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | versioneer.py
  | gradec/_version.py
)
'''